PrimeNG Dependency and Example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -322,6 +322,9 @@
       </div>
     </div>
   </div>
+  <div>
+    <p-button label="Check" />
+  </div>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
