--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="login-container">
+	<p-toast></p-toast>
+	<div class="login-card">
+		<h2>Login</h2>
+		<form (ngSubmit)="onLogin()" #loginForm="ngForm">
+			<div class="p-field">
+				<label for="username">Username</label>
+				<input pInputText id="username" name="username" [(ngModel)]="username" required autocomplete="username" />
+			</div>
+			<div class="p-field">
+				<label for="password">Password</label>
+				<input pInputText id="password" name="password" type="password" [(ngModel)]="password" required autocomplete="current-password" />
+			</div>
+			<button pButton type="submit" label="Login" [disabled]="loginLoading" class="login-btn"></button>
+		</form>
+	</div>
+</div>
