--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header-bar">
+  <div class="logo">myFolio</div>
+  <button pButton pRipple type="button" class="p-button-text menu-toggle" (click)="toggleSidebar.emit()"><i class="pi pi-bars"></i></button>
+  <div class="actions">
+    <button pButton pRipple type="button" label="Logout" class="p-button-text" (click)="logout()"><i class="pi pi-sign-out"></i></button>
+  </div>
+</div>
