--- a/src/app/features/insurance/list/list.component.scss
+++ b/src/app/features/insurance/list/list.component.scss
@@ -4,9 +4,31 @@ $mobile-breakpoint: 768px;
 // Desktop view styles
 .desktop-view {
   display: block;
+
+  .p-table {
+    margin-top: 0.5rem;
+  }
   
   @media screen and (max-width: $mobile-breakpoint) {
     display: none;
+  }
+}
+
+.list-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+
+  .list-actions {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      font-weight: 600;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+    }
   }
 }
 
