Edit Insurance fixes

--- a/src/app/features/insurance/form/form.component.html
+++ b/src/app/features/insurance/form/form.component.html
@@ -1,4 +1,6 @@
+<p-toast></p-toast>
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="insurance-form">
+  <input type="hidden" [value]="userId" name="user_id" />
 
   <!-- Section: Policy Details -->
   <h3 class="form-section-title">Policy Details</h3>
