Investments Feature - Base UI Layout and Components

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="header-bar">
-  <div class="logo">myFolio</div>
   <button pButton pRipple type="button" class="p-button-text menu-toggle" (click)="toggleSidebar.emit()"><i class="pi pi-bars"></i></button>
+  <div class="logo">myFolio</div>
+  <div class="desktop-menu">
+    <p-menubar [model]="menuItems" styleClass="main-menubar"></p-menubar>
+  </div>
   <div class="actions">
     <button pButton pRipple type="button" label="Logout" class="p-button-text" (click)="logout()"><i class="pi pi-sign-out"></i></button>
   </div>
