--- a/src/app/features/insurance/list/list.component.html
+++ b/src/app/features/insurance/list/list.component.html
@@ -2,7 +2,7 @@
 <h2 class="list-header">
   My Insurance Policies
   <div class="list-actions">
-    <button (click)="goToCreate()" pButton label="+ Create New" class="p-button-success"></button>
+    <button (click)="goToCreate()" pButton label="Create New" icon="pi pi-plus" class="p-button-success"></button>
   </div>
 </h2>
 <div class="desktop-view">
