--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -1,1 +1,1 @@
-<p-menu [model]="items" styleClass="sidebar-menu" [style]="{'width':'100%', 'border': 'none'}"></p-menu>
+<p-panelMenu [model]="items" styleClass="sidebar-menu" [style]="{'width':'100%', 'border': 'none'}"></p-panelMenu>
