--- a/src/app/features/investments/mf-list/mf-list.component.html
+++ b/src/app/features/investments/mf-list/mf-list.component.html
@@ -1,5 +1,6 @@
+<!-- Desktop Table -->
 <p-table [value]="mutualFunds" dataKey="fundId" [expandedRowKeys]="expandedRowKeys" responsiveLayout="scroll"
-  class="mf-list-table">
+  class="mf-list-table desktop-table">
   <ng-template #caption>
     <div class="list-header">
       <span>Mutual Funds</span>
@@ -21,7 +22,6 @@
       <th scope="col">Returns</th>
     </tr>
   </ng-template>
-
   <ng-template pTemplate="body" let-row let-expanded="expanded">
     <tr>
       <td>
@@ -31,156 +31,222 @@
       </td>
       <td>
         <span class="mf-fund-name">{{ row.fundName }}</span>
-        <div class="mf-folio-no mf-secondary" *ngIf="row.folios?.length === 1">Folio # {{ row.folioNo }}</div>
+        <div class="mf-folio-no mf-secondary" *ngIf="row?.folios?.length === 1">Folio # {{ row?.folioNo }}</div>
       </td>
       <td>
-        <div>{{ row.nav | inr:'1.2-2' }}</div>
-        <div class="mf-date mf-secondary">{{ row.navDate | date:'dd-MMM' }}</div>
+        <div>{{ row?.nav | inr:'1.2-2' }}</div>
+        <div class="mf-date mf-secondary">{{ row?.navDate | date:'dd-MMM' }}</div>
       </td>
       <td>
-        <div [ngClass]="{'text-red': row.dayChange < 0, 'text-green': row.dayChange > 0}">
-          {{ row.dayChange | inr:'1.0-0' }}
+        <div [ngClass]="{'text-red': row?.dayChange < 0, 'text-green': row?.dayChange > 0}">
+          {{ row?.dayChange | inr:'1.0-0' }}
         </div>
-        <div [ngClass]="{'text-red': row.dayChangePct < 0, 'text-green': row.dayChangePct > 0}" class="mf-secondary">
-          {{ row.dayChangePct | number:'1.2-2' }}%
+        <div [ngClass]="{'text-red': row?.dayChangePct < 0, 'text-green': row?.dayChangePct > 0}" class="mf-secondary">
+          {{ row?.dayChangePct | number:'1.2-2' }}%
         </div>
       </td>
       <td>
-        <div>{{ row.investedValue | inr:'1.0-0' }}</div>
-        <div class="mf-cost mf-secondary">{{ row.avgCost | inr:'1.2-2' }}</div>
+        <div>{{ row?.investedValue | inr:'1.0-0' }}</div>
+        <div class="mf-cost mf-secondary">{{ row?.avgCost | inr:'1.2-2' }}</div>
       </td>
       <td>
-        <div>{{ row.currentValue | inr:'1.0-0' }}</div>
-        <div class="mf-units mf-secondary">{{ row.units | inr:'1.0-0' }} UNITS</div>
+        <div>{{ row?.currentValue | inr:'1.0-0' }}</div>
+        <div class="mf-units mf-secondary">{{ row?.units | inr:'1.0-0' }} UNITS</div>
       </td>
       <td>
-        <div class="mf-secondary">{{ row.portfolioPct | number:'1.2-2' }}</div>
+        <div class="mf-secondary">{{ row?.portfolioPct | number:'1.2-2' }}</div>
       </td>
       <td>
-        <div [ngClass]="{'text-green': row.returnsAbs > 0, 'text-red': row.returnsAbs < 0}">
-          {{ row.returnsAbs | number:'1.0-0' }}
+        <div [ngClass]="{'text-green': row?.returnsAbs > 0, 'text-red': row?.returnsAbs < 0}">
+          {{ row?.returnsAbs | number:'1.0-0' }}
         </div>
-        <div [ngClass]="{'text-green': row.returnsPct > 0, 'text-red': row.returnsPct < 0}" class="mf-secondary">
-          {{ row.returnsPct | number:'1.2-2' }}%
+        <div [ngClass]="{'text-green': row?.returnsPct > 0, 'text-red': row?.returnsPct < 0}" class="mf-secondary">
+          {{ row?.returnsPct | number:'1.2-2' }}%
         </div>
       </td>
     </tr>
   </ng-template>
-
   <ng-template #expandedrow let-row>
     <tr>
       <td colspan="8" class="mf-expanded-row">
-        <ng-container *ngIf="row.folios && row.folios.length == 1">
+        <ng-container *ngIf="row?.folios && row?.folios.length == 1">
           <div class="card flex justify-center">
             <p-fieldset legend="Goal">
-                <p class="m-0">
-                    {{ row.folios[0].goal }} ({{ row.folios[0].goalWeight }}%)
-                </p>
+              <p class="m-0">
+                {{ row?.folios[0]?.goal }} ({{ row?.folios[0]?.goalWeight }}%)
+              </p>
             </p-fieldset>
           </div>
         </ng-container>
-        <ng-container *ngIf="row.folios && row.folios.length > 1">
-          <p-table [value]="row.folios" class="mf-folio-table">
+        <ng-container *ngIf="row?.folios && row?.folios.length > 1">
+          <p-table [value]="row?.folios" class="mf-folio-table">
             <ng-template pTemplate="header">
-              <tr>
-                <th scope="col">Folio #</th>
-                <th scope="col">Goal</th>
-                <th scope="col">NAV</th>
-                <th scope="col">1 Day Change</th>
-                <th scope="col">Invested Value</th>
-                <th scope="col">Current Value</th>
-                <th scope="col">% of Portfolio</th>
-                <th scope="col">Returns</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-folio>
-              <tr>
-                <td>{{ folio.folioNo }}</td>
-                <td>
-                  <div>{{ folio.goal }}</div>
-                  <div class="mf-secondary">{{ folio.goalWeight }}%</div>
-                </td>
-                <td>
-                  <div>{{ folio.nav | inr:'1.2-2' }}</div>
-                  <div class="mf-date mf-secondary">{{ folio.navDate | date:'dd-MMM' }}</div>
-                </td>
-                <td>
-                  <div [ngClass]="{'text-red': folio.dayChange < 0, 'text-green': folio.dayChange > 0}">
-                    {{ folio.dayChange | number:'1.0-0' }}
-                  </div>
-                  <div [ngClass]="{'text-red': folio.dayChangePct < 0, 'text-green': folio.dayChangePct > 0}" class="mf-secondary">
-                    {{ folio.dayChangePct | number:'1.2-2' }}%
-                  </div>
-                </td>
-                <td>
-                  <div>{{ folio.investedValue | inr:'1.0-0' }}</div>
-                  <div class="mf-cost mf-secondary">{{ folio.avgCost | inr:'1.2-2' }}</div>
-                </td>
-                <td>
-                  <div>{{ folio.currentValue | inr:'1.0-0' }}</div>
-                  <div class="mf-units mf-secondary">{{ folio.units | number:'1.0-0' }} UNITS</div>
-                </td>
-                <td>
-                  <div>{{ folio.portfolioPct | number:'1.2-2' }}</div>
-                </td>
-                <td>
-                  <div [ngClass]="{'text-green': folio.returnsAbs > 0, 'text-red': folio.returnsAbs < 0}">
-                    {{ folio.returnsAbs | number:'1.0-0' }}
-                  </div>
-                  <div [ngClass]="{'text-green': folio.returnsPct > 0, 'text-red': folio.returnsPct < 0}" class="mf-secondary">
-                    {{ folio.returnsPct | number:'1.2-2' }}%
-                  </div>
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
-        </ng-container>
-        <div class="mf-tabs">
-          <br>
-          <p-tabs value="0">
-            <p-tablist>
-              <p-tab value="0">Overview</p-tab>
-              <p-tab value="1">Performance</p-tab>
-              <p-tab value="2">Transaction</p-tab>
-            </p-tablist>
-            <p-tabpanels>
-              <p-tabpanel header="Overview">
-                <!-- Overview content goes here -->
-              </p-tabpanel>
-              <p-tabpanel header="Performance">
-                <!-- Performance content goes here -->
-              </p-tabpanel>
-              <p-tabpanel header="Transactions">
-                <!-- Transactions content goes here -->
-              </p-tabpanel>
-            </p-tabpanels>
-          </p-tabs>
-        </div>
-      </td>
+    <tr>
+      <th scope="col">Folio #</th>
+      <th scope="col">Goal</th>
+      <th scope="col">NAV</th>
+      <th scope="col">1 Day Change</th>
+      <th scope="col">Invested Value</th>
+      <th scope="col">Current Value</th>
+      <th scope="col">% of Portfolio</th>
+      <th scope="col">Returns</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="footer">
+  <ng-template pTemplate="body" let-folio>
     <tr>
-      <td colspan="3">Total</td>
+      <td>{{ folio?.folioNo }}</td>
       <td>
-        <div [ngClass]="{'text-red': totalDayChange < 0, 'text-green': totalDayChange > 0}">
-          {{ totalDayChange | number:'1.0-0' }}
+        <div>{{ folio?.goal }}</div>
+        <div class="mf-secondary">{{ folio?.goalWeight }}%</div>
+      </td>
+      <td>
+        <div>{{ folio?.nav | inr:'1.2-2' }}</div>
+        <div class="mf-date mf-secondary">{{ folio?.navDate | date:'dd-MMM' }}</div>
+      </td>
+      <td>
+        <div [ngClass]="{'text-red': folio?.dayChange < 0, 'text-green': folio?.dayChange > 0}">
+          {{ folio?.dayChange | number:'1.0-0' }}
         </div>
-        <div [ngClass]="{'text-red': totalDayChangePct < 0, 'text-green': totalDayChangePct > 0}">
-          {{ totalDayChangePct | number:'1.2-2' }}%
+        <div [ngClass]="{'text-red': folio?.dayChangePct < 0, 'text-green': folio?.dayChangePct > 0}"
+          class="mf-secondary">
+          {{ folio?.dayChangePct | number:'1.2-2' }}%
         </div>
       </td>
-      <td>{{ totalInvested | inr:'1.0-0' }}</td>
-      <td>{{ totalCurrent | inr:'1.0-0' }}</td>
-      <td>{{ totalPortfolioPct | number:'1.2-2' }}</td>
       <td>
-        <div [ngClass]="{'text-green': totalReturnsAbs > 0, 'text-red': totalReturnsAbs < 0}">
-          {{ totalReturnsAbs | number:'1.0-0' }}
+        <div>{{ folio?.investedValue | inr:'1.0-0' }}</div>
+        <div class="mf-cost mf-secondary">{{ folio?.avgCost | inr:'1.2-2' }}</div>
+      </td>
+      <td>
+        <div>{{ folio?.currentValue | inr:'1.0-0' }}</div>
+        <div class="mf-units mf-secondary">{{ folio?.units | number:'1.0-0' }} UNITS</div>
+      </td>
+      <td>
+        <div>{{ folio?.portfolioPct | number:'1.2-2' }}</div>
+      </td>
+      <td>
+        <div [ngClass]="{'text-green': folio?.returnsAbs > 0, 'text-red': folio?.returnsAbs < 0}">
+          {{ folio?.returnsAbs | number:'1.0-0' }}
         </div>
-        <div [ngClass]="{'text-green': totalReturnsPct > 0, 'text-red': totalReturnsPct < 0}">
-          {{ totalReturnsPct | number:'1.2-2' }}%
+        <div [ngClass]="{'text-green': folio?.returnsPct > 0, 'text-red': folio?.returnsPct < 0}" class="mf-secondary">
+          {{ folio?.returnsPct | number:'1.2-2' }}%
         </div>
       </td>
     </tr>
   </ng-template>
 </p-table>
+</ng-container>
+<div class="mf-tabs">
+  <br>
+  <p-tabs value="0">
+    <p-tablist>
+      <p-tab value="0">Overview</p-tab>
+      <p-tab value="1">Performance</p-tab>
+      <p-tab value="2">Transaction</p-tab>
+    </p-tablist>
+    <p-tabpanels>
+      <p-tabpanel header="Overview">
+        <!-- Overview content goes here -->
+      </p-tabpanel>
+      <p-tabpanel header="Performance">
+        <!-- Performance content goes here -->
+      </p-tabpanel>
+      <p-tabpanel header="Transactions">
+        <!-- Transactions content goes here -->
+      </p-tabpanel>
+    </p-tabpanels>
+  </p-tabs>
+</div>
+</td>
+</tr>
+</ng-template>
+<ng-template pTemplate="footer">
+  <tr>
+    <td colspan="3">Total</td>
+    <td>
+      <div [ngClass]="{'text-red': totalDayChange < 0, 'text-green': totalDayChange > 0}">
+        {{ totalDayChange | number:'1.0-0' }}
+      </div>
+      <div [ngClass]="{'text-red': totalDayChangePct < 0, 'text-green': totalDayChangePct > 0}">
+        {{ totalDayChangePct | number:'1.2-2' }}%
+      </div>
+    </td>
+    <td>{{ totalInvested | inr:'1.0-0' }}</td>
+    <td>{{ totalCurrent | inr:'1.0-0' }}</td>
+    <td>{{ totalPortfolioPct | number:'1.2-2' }}</td>
+    <td>
+      <div [ngClass]="{'text-green': totalReturnsAbs > 0, 'text-red': totalReturnsAbs < 0}">
+        {{ totalReturnsAbs | number:'1.0-0' }}
+      </div>
+      <div [ngClass]="{'text-green': totalReturnsPct > 0, 'text-red': totalReturnsPct < 0}">
+        {{ totalReturnsPct | number:'1.2-2' }}%
+      </div>
+    </td>
+  </tr>
+</ng-template>
+</p-table>
+
+<!-- Mobile Minimal View -->
+<div class="mobile-table">
+  <div class="mobile-header">
+    <span>Mutual Funds</span>
+    <button class="summary-toggle" (click)="cycleMobileSummary()">
+      {{ mobileSummaryLabels[mobileSummaryMode] }}
+      <i class="pi pi-angle-right"></i>
+    </button>
+    <div class="mobile-summary-value" [ngClass]="mobileSummaryClass">
+      <span *ngIf="mobileSummaryMode === 0">{{ totalCurrent | inr:'1.0-0' }}</span>
+      <span *ngIf="mobileSummaryMode === 1">{{ totalReturnsAbs | inr:'1.0-0' }} <span class="mf-secondary">({{
+          totalReturnsPct | number:'1.2-2' }}%)</span></span>
+      <span *ngIf="mobileSummaryMode === 2">{{ totalDayChange | inr:'1.0-0' }} <span class="mf-secondary">({{
+          totalDayChangePct | number:'1.2-2' }}%)</span></span>
+    </div>
+  </div>
+  <div *ngFor="let row of mutualFunds" class="mf-mobile-card">
+    <div class="mf-mobile-row">
+      <div class="mf-mobile-main">
+        <span class="mf-fund-name">{{ row.fundName }}</span>
+        <ng-container *ngIf="row.rating">
+          <span class="mf-rating">
+            <i class="pi pi-star" *ngFor="let s of [].constructor(row.rating)"></i>
+          </span>
+        </ng-container>
+        <ng-container *ngIf="!row.rating">
+          <span class="mf-unrated">Unrated</span>
+        </ng-container>
+        <div class="mf-secondary">Units: {{ row.units }}</div>
+      </div>
+      <div class="mf-mobile-value" [ngClass]="getMobileValueClass(row)">
+        <span *ngIf="mobileSummaryMode === 0">{{ row.currentValue | inr:'1.0-0' }}</span>
+        <span *ngIf="mobileSummaryMode === 1">{{ row.returnsAbs | inr:'1.0-0' }} <span class="mf-secondary">({{
+            row.returnsPct | number:'1.2-2' }}%)</span></span>
+        <span *ngIf="mobileSummaryMode === 2">{{ row.dayChange | inr:'1.0-0' }} <span class="mf-secondary">({{
+            row.dayChangePct | number:'1.2-2' }}%)</span></span>
+      </div>
+      <button *ngIf="row.folios.length > 1" class="mf-mobile-expand" (click)="toggleMobileExpand(row)">
+        <i class="pi" [ngClass]="mobileExpanded[row.fundId] ? 'pi-minus' : 'pi-plus'"></i>
+      </button>
+    </div>
+    <div class="mf-mobile-secondary" *ngIf="row?.folios?.length === 1">
+      <span *ngIf="mobileSummaryMode === 0">({{ row.investedValue | inr:'1.0-0' }})</span>
+      <span *ngIf="mobileSummaryMode === 1">({{ row.investedValue | inr:'1.0-0' }})</span>
+      <span *ngIf="mobileSummaryMode === 2">({{ row.investedValue | inr:'1.0-0' }})</span>
+    </div>
+    <div class="mf-mobile-folios"
+      *ngIf="row.folios.length > 1 && (mobileExpanded && row?.fundId && mobileExpanded[row.fundId])">
+      <div *ngFor="let folio of row?.folios" class="mf-mobile-folio">
+        <div class="mf-fund-name">{{ folio?.folioNo }}</div>
+        <div class="mf-secondary">Units: {{ folio?.units }}</div>
+        <div class="mf-mobile-value" [ngClass]="getMobileValueClass(folio)">
+          <span *ngIf="mobileSummaryMode === 0 && folio?.currentValue != null">{{ folio.currentValue | inr:'1.0-0'
+            }}</span>
+          <span *ngIf="mobileSummaryMode === 1 && folio?.returnsAbs != null && folio?.returnsPct != null">{{
+            folio.returnsAbs | inr:'1.0-0' }} <span class="mf-secondary">({{ folio.returnsPct | number:'1.2-2'
+              }}%)</span></span>
+          <span *ngIf="mobileSummaryMode === 2 && folio?.dayChange != null && folio?.dayChangePct != null">{{
+            folio.dayChange | inr:'1.0-0' }} <span class="mf-secondary">({{ folio.dayChangePct | number:'1.2-2'
+              }}%)</span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
